log
Thu 16 May 2024 08:58:00 PM UTC: 
 tests:  0|5
total_score: 0/70
d1ec8c1
Thu 16 May 2024 09:11:16 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  2|4
total_score: 15/70
5791920
Thu 16 May 2024 09:20:11 PM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  0|5
total_score: 0/70
3e1d858
Thu 16 May 2024 09:23:22 PM UTC: 
 sudoku.c | 48 +++++++++++++++++-------------------------------
 1 file changed, 17 insertions(+), 31 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
426e406
Thu 16 May 2024 09:23:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
3a5afb1
